@@ -1,6 +1,6 @@
 {
   "name": "fxa-auth-server",
-  "version": "1.27.0",
+  "version": "1.27.1",
   "description": "An identity provider for PiCL services",
   "bin": {
     "fxa-auth": "./bin/key_server.js"
